FIX THE ALIGNMENT STOP MOVING SHIT AROUND

--- a/DaheeCite/Five/installations.css
+++ b/DaheeCite/Five/installations.css
@@ -66,7 +66,7 @@ h1
   .image {
     
     width: 55%;
-    margin-left:55px;
+    margin-left:57px;
     
   }
   
